spacing issue in projects page fixed

--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -303,14 +303,22 @@
 
     .projectHeader {
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 80px 3fr;
         grid-column-gap: 30px;
         padding: 10px 40px;
-
+        align-items: center;
 
         img {
             width: 80px;
+            height: 80px;
+            max-width: 80px;
+            max-height: 80px;
+            min-width: 80px;
+            min-height: 80px;
+            object-fit: contain;
+            object-position: center;
             margin: auto;
+            display: block;
         }
 
         h2 {
